Add Subtract Stage (#139)
* Add Subtract Stage

Signed-off-by: Wenting Wang <wenting.wang@uber.com>

* Address comments and rebase main

Signed-off-by: Wenting Wang <wenting.wang@uber.com>

* Address comments

Signed-off-by: Wenting Wang <wenting.wang@uber.com>

* fix tests and format

Signed-off-by: Wenting Wang <wenting.wang@uber.com>

---------

Signed-off-by: Wenting Wang <wenting.wang@uber.com>